objects/acknowltng__brKnowledgeCategory__c.object
<CustomObject>
    <fields>
        <fullName>acknowltng__Custom_Label_In_Navigation__c</fullName>
        <label>Custom Label In Navigation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__Custom_Landing_Title__c</fullName>
        <label>Custom Landing Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__Group_With_Category_Item__c</fullName>
        <label>Group With Category Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__Landing_Content__c</fullName>
        <label>Landing Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acknowltng__Show_Landing_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Landing Page</label>
        <type>Checkbox</type>
    </fields>
    <label>Knowledge Category</label>
    <nameField>
        <label>Knowledge Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>